k8s/yamls/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak-system
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/data
          subPath:
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak-system
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak-system
spec:
  rules:
  - host: keycloak.ranchers.io
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - keycloak.ranchers.io
    secretName: tls-certs
